--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,11 @@ d-title h1 {
 }
 
 d-title p {
-  text-align:center;
+  text-align: center;
+}
+
+.about p {
+  text-align: justify;
 }
 
 .hero-left img {
@@ -100,13 +104,18 @@ d-title p {
 
 <h3 style="margin: 0px 0px 25px 0px; font-variant:small-caps; text-align:center; font-size:2em; letter-spacing:2px">about</h3>
 
+<div class="about">
 
 I am a second year PhD student in [Linguistics at the University of Pennsylvania](https://live-sas-www-ling.pantheon.sas.upenn.edu/). I use computational and behavioral methods to study how comprehenders parse linguistic input, both in real time and at different stages of language development.
 
 I received my B.A. in Linguistics from Northwestern University, where I worked with [Jennifer Cole](https://sites.northwestern.edu/cole/), [Masaya Yoshida](https://faculty.wcas.northwestern.edu/~myo507/), and [Annette D'Onofrio](https://faculty.wcas.northwestern.edu/~akd2621/). I also worked as a research assistant for (and still collaborate with) the [Language, Education, and Reading Neuroscience Lab](https://learnlab.northwestern.edu/)) in Communication Sciences and Disorders. I wrote my thesis on the role of prosodic focus in semantic reanalysis in the processing of garden-path sentences with local attachment ambiguity.
 
-Beyond linguistics research, I have interests in data visualization, science communication, and the R programming language, and I [blog](https://yjunechoe.github.io/blog.html) about these topics in my spare time as a hobby. I'm especially passionate about improving explanatory data viz in academic research and strongly believe that _style_ is just as important as _content_. I am also a [Penn MindCORE](https://mindcore.sas.upenn.edu/) student affiliate and work as a data science tutor for researchers at Penn.
+Beyond linguistics research, I have interests in data visualization, science communication, and the R programming language. I read and [blog](https://yjunechoe.github.io/blog.html) about these topics in my spare time as a hobby. I'm especially passionate about improving explanatory data viz in academic research and strongly believe that _style_ is just as important as _content_. I am also a [Penn MindCORE](https://mindcore.sas.upenn.edu/) student affiliate and work as a data science tutor for researchers at Penn.
+
+</div>
 
 <p></p>
 
 <div style='text-align: center; font-family: Fira Mono;'><span class="sc" style="font-size:1.2em">contact me: </span> yj<span>choe</span>\@sas.upenn.edu</div>
+
+<p style="font-size: 0.9em; margin-top: 2em;">Siteviews: 13,051</p>
