--- a/news.Rmd
+++ b/news.Rmd
@@ -29,6 +29,11 @@ li::marker {
 
 ## 2021
 
+### July
+
+- - My [tutorial on custom fonts in R](https://yjunechoe.github.io/posts/2021-06-24-setting-up-and-debugging-custom-fonts/) was **featured as a highlight** on the [R Weekly podcast](https://share.fireside.fm/episode/87RSVeFz+alD0Og1X?t=247).
+
+
 ### June
 
 - I gave a **talk** at [RLadies philly](https://www.rladiesphilly.org/) on using icon fonts for data viz (link to recording coming soon!). I also wrote a follow-up [blog post](https://yjunechoe.github.io/posts/2021-06-24-setting-up-and-debugging-custom-fonts/) that goes deeper into font rendering in R.
@@ -50,7 +55,7 @@ li::marker {
 
 ### October
 
-- My [tutorial](https://yjunechoe.github.io/posts/2020-09-26-demystifying-stat-layers-ggplot2/) on stat_*() functions in {ggplot2} was **featured as a highlight** on the [rweekly podcast](https://rweekly.fireside.fm/8?t=251), which curates weekly updates from the R community.
+- My [tutorial on {ggplot2} stat_*() functions](https://yjunechoe.github.io/posts/2020-09-26-demystifying-stat-layers-ggplot2/) was **featured as a highlight** on the [R Weekly podcast](https://rweekly.fireside.fm/8?t=251), which curates weekly updates from the R community.
 
 - I became a **data science tutor** at [MindCORE](https://mindcore.sas.upenn.edu/) to help researchers at Penn with data visualization and R programming.
 
