--- a/resources.Rmd
+++ b/resources.Rmd
@@ -16,13 +16,8 @@ output:
 
 - {ggplot2} style guide and showcase - [most recent version (2/10/2021)](https://yjunechoe.netlify.app/flipbooks/ggplot2_master/feb_2020_ggplot2.html)
 
-## R Programming
 
-- [Advanced R Book Club](https://github.com/r4ds/bookclub-Advanced_R) presentations
-
-    - Chappter 6 - Functions [[video](https://youtu.be/lg5rzOU6lsg?t=113), [code](https://github.com/r4ds/bookclub-Advanced_R/tree/main/Presentations/Week06/Cohort4)] (11/9/20)
-    
-## Tools
+## Software
 
 - [SnowGlobe](https://snowglobe.soc.northwestern.edu/): A tool for meta-analysis research. Developed with Jinnie Choi, Sean McWeeny, and Elizabeth Norton, with funding from the Northwestern University Library. Currently under development but basic features are functional. Validation experiments and guides at [OSF repo](https://osf.io/u25rn/).
 
@@ -45,22 +40,22 @@ output:
 
 **Tutorials**:
 
-- [A ggplot2 Tutorial for Beautiful Plotting in R](https://cedricscherer.netlify.app/2019/08/05/a-ggplot2-tutorial-for-beautiful-plotting-in-r/) _by Cédric Scherer_
+- [A ggplot2 Tutorial for Beautiful Plotting in R](https://cedricscherer.netlify.app/2019/08/05/a-ggplot2-tutorial-for-beautiful-plotting-in-r/) by Cédric Scherer
 
-- [ggplot2 Wizardry Hands-On](https://z3tt.github.io/OutlierConf2021/) - _by Cédric Scherer_
+- [ggplot2 Wizardry Hands-On](https://z3tt.github.io/OutlierConf2021/) by Cédric Scherer
 
-- [ggplot2 workshop](https://www.youtube.com/watch?v=h29g21z0a68) _by Thomas Lin Pedersen_
+- [ggplot2 workshop](https://www.youtube.com/watch?v=h29g21z0a68) by Thomas Lin Pedersen
 
 **Books**:
 
-- [R for Data Science](https://r4ds.had.co.nz/) _by Hadley Wickham and Garrett Grolemund_
+- [R for Data Science](https://r4ds.had.co.nz/) by Hadley Wickham and Garrett Grolemund
 
-- [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/) _by Yihui Xie, J. J. Allaire, and Garrett Grolemund_
+- [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/) by Yihui Xie, J. J. Allaire, and Garrett Grolemund
 
-- [ggplot2: elegant graphics for data analysis](https://ggplot2-book.org/) _by Hadley Wickham, Danielle Navarro, and Thomas Lin Pedersen_
+- [ggplot2: elegant graphics for data analysis](https://ggplot2-book.org/) by Hadley Wickham, Danielle Navarro, and Thomas Lin Pedersen
 
-- [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/) _by Claus O. Wilke_
+- [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/) by Claus O. Wilke
 
-- [Efficient R Programming](https://csgillespie.github.io/efficientR/) _by Colin Gillespie and Robin Lovelace_
+- [Efficient R Programming](https://csgillespie.github.io/efficientR/) by Colin Gillespie and Robin Lovelace
 
-- [Advanced R](https://adv-r.hadley.nz/) _by Hadley Wickham_
+- [Advanced R](https://adv-r.hadley.nz/) by Hadley Wickham
