--- a/_posts/2021-06-24-setting-up-and-debugging-custom-fonts/setting-up-and-debugging-custom-fonts.Rmd
+++ b/_posts/2021-06-24-setting-up-and-debugging-custom-fonts/setting-up-and-debugging-custom-fonts.Rmd
@@ -38,7 +38,15 @@ opts_chunk$set(
 )
 ```
 
-_This blog post was featured in the [R Weekly highlights podcast](https://share.fireside.fm/episode/87RSVeFz+alD0Og1X?t=247)! Thanks to the R Weekly team for the comprehensive review!_
+<div class="opener">
+
+_This blog post was featured in the [R Weekly highlights podcast](https://share.fireside.fm/episode/87RSVeFz+alD0Og1X?t=247)! Thanks to the [R Weekly team](https://rweekly.org/2021-W29.html) for the comprehensive review!_
+
+**An important point of clarification (30/07/2021)**: Many people are familiar with {showtext} and {extrafont}, and may even have existing workflows centered around those packages. In this blog post, there is no "installing" of fonts of any sort _within the R session_. The magic here is that {ragg} is designed to directly access the fonts installed on your system (with some caveats as described in detail later). This issue of the graphic device is _indepenednt_ of the kind of things that {showtext} and {extrafont} does, which is why they're not relevant here.
+
+**tl;dr:** [don't use {showtext}](https://twitter.com/thomasp85/status/1355083725156077571) and [don't use {extrafont}](https://twitter.com/thomasp85/status/1261539815960518656) to follow the workflow described in this blog post!^[And I can also personally attest that I used to use them until {ragg} was developed, and I never loaded these packages since. But this isn't a value judgment - if these packages continue to work for you, then great! But do know that there are some [known issues with reliability](https://twitter.com/CedScherer/status/1238532616564998148) (though to be fair, {extrafont} and {showtext} were one of the first attempts at solving the font rendering issue in R and they've actually done a great job over the years!).]
+
+</div>
 
 ## Introduction
 
